--- a/src/index.scss
+++ b/src/index.scss
@@ -10,19 +10,52 @@ body {
   .hide {
     display: none;
   }
-  
+
   .show {
     display: block;
   }
-  
+
   h1 {
     text-align: center;
   }
-  
+
+  button {
+    border: none;
+    background: rgb(68, 108, 188);
+  }
+
   .container {
     width: 100%;
     height: 700px;
-    
+
+    .logIn {
+      height: 100%;
+      margin-top: 50px;
+
+      &.show {
+        display: flex;
+        justify-content: center;
+      }
+
+      .inputButton {
+        width: 50%;
+      }
+
+      input, button {
+        height: 30px;
+      }
+
+      input {
+        width: 85%;
+      }
+
+      button {
+        width: 60px;
+        height: 30px;
+        color: white;
+      }
+    }
+
     .chat {
       width: 100%;
       height: 100%;
@@ -38,7 +71,7 @@ body {
         ul {
           display: flex;
           flex-direction: row-reverse;
-          
+
           li {
             width: 10%;
             list-style: none;
@@ -51,7 +84,7 @@ body {
         }
       }
     }
-      
+
       .userListMessageContainer {
         display: flex;
         flex-direction: row;
@@ -62,11 +95,11 @@ body {
           height: 100%;
           background:rgb(65, 65, 65);
           border-radius: 0 0 0 10px;
-          
+
           ul {
             width: 100%;
             padding: 0 10px 0 10px;
-            
+
             li {
               list-style: none;
               width: 100%;
@@ -78,7 +111,7 @@ body {
             }
           }
         }
-        
+
         .messageContainer {
           width: 80%;
           height: 636px;
@@ -90,17 +123,19 @@ body {
             height: 95%;
             display: flex;
             flex-direction: column;
+            overflow: auto;
+            scroll-behavior: auto;
 
-            .message {
-              width: 40%;
+            .joinMessage {
+              max-width: 40%;
               display: flex;
               flex-direction: column;
               margin: 10px 20px 10px 20px;
+              align-self: flex-start;
 
               .messageBody {
-                width: 100%;
-                background: lightgreen;
-                border-radius: 0 10px 10px 10px;
+                background: rgb(195, 194, 194);
+                border-radius: 10px;
 
                 p {
                   padding: 15px 15px 0 15px;
@@ -112,39 +147,69 @@ body {
               }
             }
 
-            #you {
-              align-self: flex-end;
+
+            .message {
+              max-width: 40%;
               display: flex;
               flex-direction: column;
+              margin: 10px 20px 10px 20px;
 
-              h4 {
-                text-align: end;
-              }
+              &#other {
+                align-self: flex-start;
 
-              .messageBody {
-                background: lightskyblue;
-                border-radius: 10px 0 10px 10px;
-              }
+                .messageBody {
+                  background: lightgreen;
+                  border-radius: 0 10px 10px 10px;
 
-              small {
-                text-align: start;
+                  p {
+                    padding: 15px 15px 0 15px;
+                  }
+                }
+
+                // ! A CORRIGER
+                &#other small {
+                  text-align: end;
+                }
               }
             }
-          }
 
-          .writingNotification {
-            width: 30%;
-            height: 30px;
-            text-align: center;
-          }
+              #you {
+                align-self: flex-end;
+                display: flex;
+                flex-direction: column;
 
-          .messageInput {
-            width: 100%;
-            height: 50px;
-            display: flex;
-            flex-direction: row;
-            justify-content: space-evenly;
-            align-items: center;
+                h4 {
+                  text-align: end;
+                }
+
+                .messageBody {
+                  background: lightskyblue;
+                  border-radius: 10px 0 10px 10px;
+
+                  p {
+                    padding: 15px 15px 0 15px;
+                  }
+                }
+
+                small {
+                  text-align: start;
+                }
+              }
+          }
+            .writingNotification {
+              width: 30%;
+              height: 30px;
+              //text-align: center;
+              margin-left: 20px;
+            }
+
+            .messageInput {
+              width: 100%;
+              height: 50px;
+              display: flex;
+              flex-direction: row;
+              justify-content: space-evenly;
+              align-items: center;
 
             input {
               width: 85%;
@@ -155,8 +220,6 @@ body {
               width: 40px;
               height: 40px;
               border-radius: 50%;
-              border: none;
-              background: rgb(68, 108, 188);
 
               p {
                 position: relative;
