--- a/src/index.scss
+++ b/src/index.scss
@@ -85,161 +85,175 @@ body {
       }
     }
 
-      .userListMessageContainer {
-        display: flex;
-        flex-direction: row;
-        height: 646px;
+    .userListMessageContainer {
+      display: flex;
+      flex-direction: row;
+      height: 646px;
 
-        .userList {
-          width: 20%;
-          height: 100%;
-          background:rgb(65, 65, 65);
-          border-radius: 0 0 0 10px;
+      .userList {
+        width: 20%;
+        height: 100%;
+        background: rgb(65, 65, 65);
+        border-radius: 0 0 0 10px;
 
-          ul {
-            width: 100%;
-            padding: 0 10px 0 10px;
-
-            li {
-              list-style: none;
-              width: 100%;
-              border-radius: 10px 10px 10px 10px;
-              padding: 2px;
-              margin: 5px auto 5px auto;
-              text-align: center;
-
-            }
-
-            .bot {
-              background: lightgrey;
-            }
-
-            .user {
-              background: #a1d0e0;
-            }
-          }
+        .userListTitle {
+          width: 60%;
+          margin: 20px auto;
+          text-align: center;
+          color: white;
+          border-bottom: 1px solid white;
         }
 
-        .messageContainer {
-          width: 80%;
-          height: 636px;
+        ul {
+          width: 100%;
+          padding: 0 10px 0 10px;
+
+          li {
+            list-style: none;
+            width: 100%;
+            border-radius: 10px 10px 10px 10px;
+            padding: 2px;
+            margin: 5px auto 5px auto;
+            text-align: center;
+
+          }
+
+          .bot {
+            background: lightgrey;
+          }
+
+          .user {
+            background: #a1d0e0;
+          }
+        }
+      }
+
+      .messageContainer {
+        width: 80%;
+        height: 636px;
+        display: flex;
+        flex-direction: column;
+
+        .messages {
+          width: 100%;
+          height: 100%;
           display: flex;
           flex-direction: column;
+          overflow: auto;
+          scroll-behavior: auto;
 
-          .messages {
-            width: 100%;
-            height: 95%;
+          #joinMessage, #leaveMessage {
+            max-width: 40%;
             display: flex;
             flex-direction: column;
-            overflow: auto;
-            scroll-behavior: auto;
+            margin: 10px 20px 10px 20px;
+            align-self: flex-start;
 
-            #joinMessage, #leaveMessage {
-              max-width: 40%;
-              display: flex;
-              flex-direction: column;
-              margin: 10px 20px 10px 20px;
+            .messageBody {
+              background: rgb(195, 194, 194);
+              border-radius: 10px;
+
+              p {
+                padding: 15px 15px 0 15px;
+              }
+            }
+
+            small {
+              text-align: end;
+            }
+          }
+
+          .message {
+            max-width: 40%;
+            display: flex;
+            flex-direction: column;
+            margin: 10px 20px 10px 20px;
+
+            &#other {
               align-self: flex-start;
 
               .messageBody {
-                background: rgb(195, 194, 194);
-                border-radius: 10px;
+                background: lightgreen;
+                border-radius: 0 10px 10px 10px;
 
                 p {
                   padding: 15px 15px 0 15px;
                 }
               }
 
-              small {
+              // ! A CORRIGER
+              &#other small {
                 text-align: end;
               }
             }
-
-
-            .message {
-              max-width: 40%;
-              display: flex;
-              flex-direction: column;
-              margin: 10px 20px 10px 20px;
-
-              &#other {
-                align-self: flex-start;
-
-                .messageBody {
-                  background: lightgreen;
-                  border-radius: 0 10px 10px 10px;
-
-                  p {
-                    padding: 15px 15px 0 15px;
-                  }
-                }
-
-                // ! A CORRIGER
-                &#other small {
-                  text-align: end;
-                }
-              }
-            }
-
-              #you {
-                align-self: flex-end;
-                display: flex;
-                flex-direction: column;
-
-                h4 {
-                  text-align: end;
-                }
-
-                .messageBody {
-                  background: lightskyblue;
-                  border-radius: 10px 0 10px 10px;
-
-                  p {
-                    padding: 15px 15px 0 15px;
-                  }
-                }
-
-                small {
-                  text-align: start;
-                }
-              }
           }
-            .writingNotification {
-              width: 30%;
-              height: 30px;
-              //text-align: center;
-              margin-left: 20px;
+
+          #you {
+            align-self: flex-end;
+            display: flex;
+            flex-direction: column;
+
+            h4 {
+              text-align: end;
             }
 
-            .messageInput {
-              width: 100%;
-              height: 50px;
-              display: flex;
-              flex-direction: row;
-              justify-content: space-evenly;
-              align-items: center;
-
-            input {
-              width: 85%;
-              height: 30px;
-            }
-
-            button {
-              width: 40px;
-              height: 40px;
-              border-radius: 50%;
+            .messageBody {
+              background: lightskyblue;
+              border-radius: 10px 0 10px 10px;
 
               p {
-                position: relative;
-                top: 40%;
-                left: 55%;
-                transform: translate(-50%, -50%);
-                color: white;
-                font-size: 40px;
+                padding: 15px 15px 0 15px;
               }
+            }
+
+            small {
+              text-align: start;
+            }
+          }
+        }
+
+        .messageInputWritingNotification {
+          height: 80px;
+          display: flex;
+          flex-direction: column;
+          justify-content: flex-end;
+        }
+
+        .writingNotification {
+          width: 30%;
+          height: 30px;
+          margin-left: 20px;
+        }
+
+        .messageInput {
+          width: 100%;
+          height: 50px;
+          display: flex;
+          flex-direction: row;
+          justify-content: space-evenly;
+          align-items: center;
+
+          input {
+            width: 85%;
+            height: 30px;
+          }
+
+          button {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+
+            p {
+              position: relative;
+              top: 40%;
+              left: 55%;
+              transform: translate(-50%, -50%);
+              color: white;
+              font-size: 40px;
             }
           }
         }
       }
     }
+  }
 }
