--- a/src/index.scss
+++ b/src/index.scss
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-  background: linear-gradient(320deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 50%, rgba(0,212,255,1) 100%);
+  background: linear-gradient(300deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
   height: 100%;
 
   .hide {
@@ -24,6 +24,7 @@ body {
 
   h1 {
     text-align: center;
+    color: white;
   }
 
   button {
@@ -33,31 +34,32 @@ body {
 
   .container {
     width: 100%;
-    height: 800px;
+    height: 700px;
 
     .logIn {
       height: 100%;
-      margin-top: 50px;
 
       &.show {
         display: flex;
         justify-content: center;
+        align-items: center;
       }
 
       .inputButton {
-        width: 50%;
+        width: 80%;
       }
 
       input, button {
         height: 30px;
+        border-radius: 10px;
       }
 
       input {
-        width: 85%;
+        width: 70%;
       }
 
       button {
-        width: 60px;
+        width: 20%;
         height: 30px;
         color: white;
       }
@@ -65,7 +67,7 @@ body {
 
     .chat {
       width: 100%;
-      height: 100%;
+      height: 700px;
       border: 2px solid lightgrey;
       border-radius: 10px;
 
@@ -95,7 +97,7 @@ body {
     .userListMessageContainer {
       display: flex;
       flex-direction: row;
-      height: 746px;
+      height: 646px;
 
       .userList {
         width: 20%;
@@ -139,14 +141,13 @@ body {
       .messageContainer {
         width: 80%;
         height: 100%;
-        display: flex;
         flex-direction: column;
         background: white;
         border-radius: 0 0 7px 0;
 
         .messages {
           width: 100%;
-          height: 100%;
+          height: 565px;
           display: flex;
           flex-direction: column;
           overflow: auto;
@@ -223,7 +224,6 @@ body {
 
         .messageInputWritingNotification {
           height: 80px;
-          display: flex;
           flex-direction: column;
           justify-content: flex-end;
         }
